<resources>
    <string name="app_name">HookEuicc</string>
    <string name="xposeddescription">Bypasses eSIM requirements for certain apps and can be used to retrieve eSIM codes.</string>

    <string name="not_supported">LSPosed is not activated, or your environment is not supported. Please check your framework status.</string>
    <string name="ignore">Ignore</string>

    <string name="title_enable_hook">Hook Euicc</string>
    <string name="summary_enable_hook">Spoof eSIM support to retrieve eSIM codes.\nSelect the apps you want to spoof.</string>

    <string name="title_enable_fake_eid">Fake EID</string>
    <string name="summary_enable_fake_eid"></string>

    <string name="title_fake_eid_value">EID (32-bit)</string>
    <string name="summary_fake_eid_value">89044123456789876543210123456789</string>

    <string name="title_no_euicc">Non-eUICC Mode</string>
    <string name="summary_no_euicc">Fixes access issues on devices where eUICC [ISD-R] has exclusive access.\nRequires selecting [com.android.phone] and rebooting.\nNote: Hot-swapping is not supported. Insert the eUICC card before rebooting.</string>

    <string name="title_bypass_omapi">OMAPI Bypass</string>
    <string name="summary_bypass_omapi">Bypass ARA/ARF restrictions. Typically used for OMAPI access on cards without ARA.\nRequires selecting [com.android.se] and rebooting.\nNote: Do not enable unless specifically required.</string>

    <string name="title_hide_icon">Hide Icon</string>
    <string name="summary_hide_icon">Hide the module icon from the launcher.</string>
</resources>
